--- a/style.css
+++ b/style.css
@@ -250,7 +250,6 @@ color: #011B50;
     padding: 40px 0px;
     margin: 20px 20px;
     text-align: center;
-    display: inline-block;
     float: left;
     width: 30%;
     min-height: 231px;
@@ -273,4 +272,25 @@ color: #011B50;
     color: #989898;
     font-size: 0.9em;
     font-weight: 200;
+}
+
+.app-mobile {
+    width: 100%;
+    background-color: #011B50;
+}
+
+.app-content{
+    float: left;
+    width: 50%;
+}
+
+.app-content h4 {
+    color: white;
+    font-size: 1.8em;
+    padding: 30px 0px;
+}
+
+.app-img {
+    float: left;
+    width: 50%;
 }
