--- a/style.css
+++ b/style.css
@@ -373,3 +373,99 @@ color: #011B50;
 #penultimate-section {
     margin-bottom: 55px;
 }
+
+footer{
+    width: 100%;
+    background-color: #001A4F;
+    display: inline-block;
+}
+
+.footer-left {
+    color: white;
+    width: 20%;
+    float: left;
+    font-size: 0.8em;
+}
+
+.footer-left img {
+    padding: 30px 0px;
+}
+
+.footer-left a {
+    margin: 10px 0px;
+    text-decoration: none;
+    color: white;
+}
+
+.footer-left p{
+    margin-bottom: 10px;
+}
+
+.social-icons{
+    padding: 10px 0px;
+}
+
+.footer-right {
+    margin-left: 50px;
+    width: calc(80% - 50px);
+    float:left;
+    padding: 30px 0px;
+    border-bottom: 1px solid white;
+}
+
+.footer-right-top {
+    width: 100%;
+    display: inline-block;
+    padding-bottom: 30px;
+    border-bottom: 1px solid white;
+}
+
+.footer-right-top li {
+    font-size: 0.7em;
+    list-style-type: none;
+    color: #DEE2E6;
+    float: left;
+    width: 12%;
+    margin: 0px 20px;
+}
+
+.footer-right-top a:hover {
+    color: #65DE82;
+}
+
+.footer-right a {
+    text-decoration: none;
+    display: block;
+    line-height: 20px;
+}
+
+.footer-right-top h3 {
+    font-size: 0.8em;
+    padding-bottom: 6px;
+}
+
+.footer-right-top a {
+    color: white;
+}
+
+.footer-right-bottom li {
+    padding-top: 30px;
+    padding-bottom: 20px;
+    width: 15%;
+    list-style-type: none;
+    float: left;
+}
+
+.footer-right-bottom a{
+    color: white;
+    font-size: 0.7em;
+    text-decoration: none;
+}
+
+.footer-right-bottom a:hover {
+    color: #65DE82;
+}
+
+#privacy-policy {
+    margin-left: 13px;
+}
